--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -17,6 +17,11 @@ h2{
   font-size: 35px;
 }
 
+label{
+  color: #272a2e;
+  font-weight: 600;
+}
+
 p{
   font-size: 14px;
   font-family: 'Maven Pro', sans-serif;
@@ -28,7 +33,18 @@ a{
 }
 
 a:hover{
-  color: #fff;
+  color: #fa5900;
+  text-decoration: none;
+}
+
+
+.adamin-text{
+  text-transform: capitalize;
+}
+
+.bg-danger{
+  text-transform: capitalize;
+  text-align: center;
 }
 
 .btn{
@@ -83,7 +99,8 @@ a:hover{
 }
 
 .home-stats{
-  background-color: #fff;
+  /* background-color: #f91a51; */
+  color: #272a2e;
 }
 
 .home-results{
@@ -93,7 +110,7 @@ a:hover{
 
 .icon-bubble{
   margin: 30px;
-  background-color: #ffffff;
+  /* background-color: #f91a51; */
 }
 
 .login-alert{
@@ -120,10 +137,17 @@ a:hover{
   width: 40px;
 }
 
+.post-jumbo{
+  background-color: #979797;
+  color: #272a2e;
+  border-bottom: 3px solid #fa5900;
+}
+
 .pulse{
   animation-iteration-count: 100;
   animation-duration: 2s;
 }
+
 
 .rotateIn{
   animation-duration: 3s;
@@ -160,15 +184,11 @@ a:hover{
 
 .round-img{
   border-radius: 50%;
-  border: 3px solid #7e41d5;
+  /* border: 3px solid #979797; */
 }
 
 .round-img:hover{
   border: 3 px solid #fa5900;
-}
-
-.signup-icon{
-  width: 100px;
 }
 
 .splash{
@@ -180,15 +200,22 @@ a:hover{
   font-family: 'Eagle Lake', cursive;
   background-color: #000000;
   border-bottom: 3px solid #fa5900;
+  margin-bottom: 0px;
+}
+
+.username{
+  position: absolute;
+  font-size: 25px;
+  right: 2%;
 }
 
 .video-link{
     margin-bottom: 15px;
 }
 
-.video-icon{
-  width: 50px;
-  color: #fa5900;
+.video-icon-wrap{
+  font-size: 50px;
+  color: #272a2e;
   text-decoration: none;
 }
 
