--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -18,7 +18,7 @@ h2{
 }
 
 label{
-  color: #272a2e;
+
   font-weight: 600;
 }
 
@@ -42,6 +42,20 @@ a:hover{
   text-transform: capitalize;
 }
 
+.admin-data{
+  background-color: #242146;
+  color: #fff;
+}
+
+.admin-jumbo{
+  border-bottom: 3px solid #fa5900;
+  /* background-color: #f91a51; */
+  color: #fff;
+  background-image: url("/images/genji.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .bg-danger{
   text-transform: capitalize;
   text-align: center;
@@ -59,8 +73,19 @@ a:hover{
 
 .btn:hover{
   color: #fff;
-  background-color: #7e41d5;
+  background-color: #f91a51;
   border: 2px solid #979797;
+}
+
+.card{
+  padding-left: 0px;
+  padding-right: 0px;
+  border: 1px solid #979797;
+}
+
+.card-body{
+  color: #272a2e;
+  background-color: #eee;
 }
 
 .comment-text{
@@ -76,6 +101,13 @@ a:hover{
 .center-placeholder{
     text-align:center;
   }
+
+.crop {
+    height: 100px;
+    object-fit: cover;
+    background-color: #333333;
+}
+
 
 .error-text{
   text-align: center;
@@ -100,12 +132,17 @@ a:hover{
 
 .home-stats{
   /* background-color: #f91a51; */
-  color: #272a2e;
+  color: #fff;
+  background-color: #242146;
 }
 
 .home-results{
   background-color: #272a2e;
   color: #fff;
+
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#272a2e), color-stop(94%, #242146));
+  background-image: -webkit-linear-gradient(top, #272a2e 0%, #242146 94%);
+  background-image: linear-gradient(to bottom, #272a2e 0%,  #242146 94%);
 }
 
 .icon-bubble{
@@ -117,10 +154,26 @@ a:hover{
   min-height: 95vh;
 }
 
+.modal-header{
+  color: #fa5900;
+  background-color: #242146;
+  display: block;
+}
+
+.modal-body{
+  color: #272a2e;
+  background-color: #eee;
+  border-radius: 0 0 7px 7px;
+}
+
 .key-icon-wrap{
   font-size: 150px;
   text-align: center;
   color: #fa5900;
+}
+
+.jumbo-text{
+  background-color: rgba(20,20,20,.5);
 }
 
 .nav-active{
@@ -137,17 +190,24 @@ a:hover{
   width: 40px;
 }
 
-.post-jumbo{
-  background-color: #979797;
-  color: #272a2e;
+.post-content{
+  background-color: #242146;
+  color: #fff;
+}
+
+.post-jumbo{ 
   border-bottom: 3px solid #fa5900;
+  background-color: #f91a51;
+  color: #fff;
+  background-image: url("/images/fortnite-wall.png");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .pulse{
   animation-iteration-count: 100;
   animation-duration: 2s;
 }
-
 
 .rotateIn{
   animation-duration: 3s;
@@ -156,7 +216,7 @@ a:hover{
 .ReactModal__Content--after-open{
   margin-left: 20%;
   width: 60%;
-  margin-top: 10%;
+  margin-top: 5%;
   border-radius: 10px;
   background-color: #ffffff;
   border: 3px solid #333333;
@@ -175,7 +235,7 @@ a:hover{
 }
 
 .reports-row:nth-child(even){
-    background-color:#979797;
+    background-color:#ddd;
 }
 
 .reports-row:nth-child(odd){
@@ -184,7 +244,7 @@ a:hover{
 
 .round-img{
   border-radius: 50%;
-  /* border: 3px solid #979797; */
+  border: 3px solid #fa5900;
 }
 
 .round-img:hover{
@@ -215,7 +275,7 @@ a:hover{
 
 .video-icon-wrap{
   font-size: 50px;
-  color: #272a2e;
+  color: #242146;
   text-decoration: none;
 }
 
