save before merge.  added new art

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -57,7 +57,7 @@ ul{
   border-bottom: 3px solid #fa5900;
   /* background-color: #f91a51; */
   color: #fff;
-  background-image: url("/images/genji.jpg");
+  background-image: url("/images/forestwp.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
@@ -345,7 +345,7 @@ ul{
   border-bottom: 3px solid #fa5900;
   background-color: #000;
   color: #fff;
-  background-image: url("/images/fortnite-wall.png");
+  background-image: url("/images/falloutwp.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
@@ -440,7 +440,7 @@ ul{
   border-bottom: 3px solid #fa5900;
   background-color: #000;
   color: #272a2e;
-  background-image: url("/images/destinywp.jpg");
+  background-image: url("/images/minecraftwp.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
